Add CZ locale, tags fixed

--- a/app/views/admin/settings/forms/_user_experience.html.erb
+++ b/app/views/admin/settings/forms/_user_experience.html.erb
@@ -67,7 +67,7 @@
           <%= admin_config_description Constants::Settings::UserExperience::DETAILS[:default_locale][:description] %>
           <%= select_tag "settings_user_experience[default_locale]",
                          options_for_select(
-                           [%w[English en], %w[Français fr]],
+                           [%w[English en], %w[Czech cs]],
                            Settings::UserExperience.default_locale,
                          ),
                          multiple: false,
